--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/abimnyud/backend-beginner#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "joi": "^17.8.3"
+    "joi": "^17.8.3",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
